# talospy

./: .pre-commit-config.yaml  404.html  LICENCE.md  README.md  cookiecutter.json  index.html  search.html
.github/workflows/: deploy-mkdocs.yml
docs/: mkdocs.yml
docs/docs/: index.md
docs/site/: 404.html  index.html  search.html
docs/site/search/: search_index.json
search/: search_index.json
{{ cookiecutter.project_slug }}/: .gitattributes  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/app/: app.py  requirements.txt
{{ cookiecutter.project_slug }}/app/modules/: mod_welcome.py
{{ cookiecutter.project_slug }}/app/tests/pytest-playwright/: test_e2e.py
{{ cookiecutter.project_slug }}/app/tests/pytest-unit/: test_unit.py
